[package]
name = "pputl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
clap = { version = "4.3.19", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.1"
